@@ -1,3 +1,9 @@
+Sun Feb 19 17:24:45 MST 2006  David Trowbridge <trowbrds@gmail.com>
+
+	* src/fe-gnome/conversation-panel.c:
+	  - Apply Daniel Drake's patch to prevent the default font for new
+	    users from being really ugly (#331832)
+
 Sun Feb 19 17:04:14 MST 2006  David Trowbridge <trowbrds@gmail.com>
 
 	* src/fe-gnome/preferences-page-irc.c:
